fix nav on mobile

--- a/src/partials/Nav.scss
+++ b/src/partials/Nav.scss
@@ -17,6 +17,7 @@ nav {
     position: static;
     display: flex;
     flex-direction: column;
+    margin: 0 1rem;
   }
 
   ul {
@@ -27,8 +28,7 @@ nav {
 }
 
 .ui.search {
-  left: 0;
-  align-items: center;
+  align-items: left;
 
   input {
     text-transform: uppercase;
@@ -39,7 +39,7 @@ nav {
   }
 
   a {
-    margin: 10px auto;
+    margin: 10px 0;
     color: $primaryfnt;
   }
 }
@@ -126,11 +126,12 @@ nav {
 .menu_open {
   position: absolute;
   top: 20px;
-  right: 20px;
+  right: 10px;
+  margin: 0.5rem;
 
   svg {
     color: white;
-    font-size: $base-font-size * 2;
+    font-size: $base-font-size * 1.5;
   }
 }
 
@@ -141,6 +142,10 @@ nav {
 @media (min-width: 480px) {
   nav {
     justify-content: space-between;
+  }
+
+  .ui.search {
+    align-items: center;
   }
 }
 
